Fixed small gap between coverage indicator and top of page

--- a/Encoding 1/encoding_1.css
+++ b/Encoding 1/encoding_1.css
@@ -31,7 +31,7 @@ nav a {
   font-weight: bold;
   font-size: 20px;
   position: sticky;
-  top: 0;
+  top: -1px;
 }
 
 #coverage-indicator td {
